force-app/main/default/objects/CM_Supply_Relationship__c/fields/Edge_Category__c.field-meta.xml
<CustomField>
    <fullName>Edge_Category__c</fullName>
    <defaultValue>&apos;DOWNSTREAM&apos;</defaultValue>
    <label>Edge Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPSTREAM</fullName>
            </value>
            <value>
                <fullName>DOWNSTREAM</fullName>
                <default>true</default>
                <label>DOWNSTREAM</label>
            </value>
            <value>
                <fullName>COMPETITOR</fullName>
            </value>
            <value>
                <fullName>INDIRECT_PATH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>