force-app/main/default/objects/CM_Supply_Relationship__c/fields/Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Relation_Type__c</fullName>
    <label>Relation Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>