force-app/main/default/objects/CM_Supply_Relationship__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CMSourceRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>