force-app/main/default/objects/CM_Supply_Relationship__c/fields/Supply_Scenario_Code__c.field-meta.xml
<CustomField>
    <fullName>Supply_Scenario_Code__c</fullName>
    <label>Supply Scenario Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>