force-app/main/default/objects/CM_Supply_Relationship__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CMTargetRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>